internal/fixtures/architecture/negative/fastapi-layer/apps/api/src/deepwork_api/domain/bad.py
from fastapi import Request

FORBIDDEN = Request
